a try to a deadlock is submited to the project

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ simpleDLL/MathLibrary/Debug
 simpleDLL/simpleDLL/Debug
 simpleThreadWithMutex/.vs
 simpleThreadWithMutex/Debug
+deadlock/.vs
+deadlock/Debug
